syntax = "proto3";

option go_package = "./proto";

import 'google/protobuf/empty.proto';

message GetEventsCountRequest { uint64 task_id = 1; }

message GetEventsCountResponse {
  uint32 view_count = 1;
  uint32 like_count = 2;
}

message GetTopTasksRequest { uint32 event_type = 1; }

message GetTopTasksResponse { repeated TopTask tasks = 1; }

message GetTopAuthorsResponse { repeated TopAuthor authors = 1; }

message TopTask {
  uint64 task_id = 1;
  uint64 task_author_id = 2;
  uint32 view_count = 3;
  uint32 like_count = 4;
}

message TopAuthor {
  uint64 task_author_id = 1;
  uint32 like_count = 2;
}

service StatService {
  rpc GetEventsCount(GetEventsCountRequest) returns (GetEventsCountResponse);
  rpc GetTopTasks(GetTopTasksRequest) returns (GetTopTasksResponse);
  rpc GetTopAuthors(google.protobuf.Empty) returns (GetTopAuthorsResponse);
}
